--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-spring.config.import=optional:secrets.properties
-spring.application.name=FitSpace Sports Venue Booking Website Backend
+spring.config.import=optional:secret.properties
+spring.application.name=Rythmic Studio Website Backend
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.datasource.hikari.minimum-idle=10
 spring.datasource.hikari.maximum-pool-size=50
 spring.jpa.properties.hibernate.format_sql=true
